lightningrod python module renamed to iotronic_lightningrod;

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = iotronic-lightning-rod-agent
+name = iotronic_lightningrod
 summary = Implementation of the Lightning-rod, the Stack4Things node-side probe
 description-file =
     README.rst
@@ -21,7 +21,7 @@ classifier =
 
 [files]
 packages =
-    lightningrod
+    iotronic_lightningrod
 
 [build_sphinx]
 source-dir = doc/source
@@ -32,18 +32,18 @@ all_files = 1
 upload-dir = doc/build/html
 
 [compile_catalog]
-directory = lightningrod/locale
-domain = lightningrod
+directory = iotronic_lightningrod/locale
+domain = iotronic_lightningrod
 
 [update_catalog]
-domain = lightningrod
-output_dir = lightningrod/locale
-input_file = lightningrod/locale/lightningrod.pot
+domain = iotronic_lightningrod
+output_dir = iotronic_lightningrod/locale
+input_file = iotronic_lightningrod/locale/iotronic_lightningrod.pot
 
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
-output_file = lightningrod/locale/lightningrod.pot
+output_file = iotronic_lightningrod/locale/iotronic_lightningrod.pot
 
 [build_releasenotes]
 all_files = 1
