--- a/tox.ini
+++ b/tox.ini
@@ -38,3 +38,4 @@ show-source = True
 ignore = E123,E125
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
+max-line-length = 100
