Registration management first approach completed.

--- a/settings.example.json
+++ b/settings.example.json
@@ -1,11 +1,13 @@
 {
-  "node": {
-    "token": "<REGISTRATION-TOKEN>"
-  },
   "iotronic": {
-    "registration-agent": {
-      "url": "ws://<WAMP-SERVER>:<WAMP-PORT>/",
-      "realm": "<IOTRONIC-REALM>"
+    "node": {
+      "token": "<REGISTRATION-TOKEN>"
+    },
+    "wamp": {
+      "registration-agent": {
+        "url": "ws://<WAMP-SERVER>:<WAMP-PORT>/",
+        "realm": "<IOTRONIC-REALM>"
+      }
     }
   }
 }
