Registration management updated: multiple wamp server management; Updated YUN gpio management; Updated PluginManager methods; Updated VFS library for remote access.

--- a/settings.example.json
+++ b/settings.example.json
@@ -1,7 +1,7 @@
 {
   "iotronic": {
     "node": {
-      "token": "<REGISTRATION-TOKEN>"
+      "code": "<REGISTRATION-TOKEN>"
     },
     "wamp": {
       "registration-agent": {
