--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,9 @@ name = iotronic_lightningrod
 summary = Implementation of the Lightning-rod, the Stack4Things node-side probe
 description-file =
     README.rst
-author = OpenStack
-author-email = openstack-dev@lists.openstack.org
-home-page = http://www.openstack.org/
+author = Nicola Peditto, Fabio Verboso
+author-email = unime.mdslab@gmail.com
+home-page = http://stack4things.unime.it/
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
