--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = iotronic_lightningrod
-summary = Implementation of the Lightning-rod, the Stack4Things node-side probe
+summary = Implementation of the Lightning-rod, the Stack4Things board-side probe
 description-file =
     README.rst
 author = Nicola Peditto, Fabio Verboso
