--- a/etc/systemd/system/s4t-lightning-rod.service
+++ b/etc/systemd/system/s4t-lightning-rod.service
@@ -11,7 +11,7 @@ StandardOutput=journal
 StandardError=journal
 WorkingDirectory=/usr/bin/
 ExecStart=/usr/bin/python /usr/bin/lightning-rod
-Restart=always
+Restart=on-abort
 
 [Install]
 WantedBy=multi-user.target
