python deployment updated.

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,3 +49,13 @@ output_file = iotronic_lightningrod/locale/iotronic_lightningrod.pot
 all_files = 1
 build-dir = releasenotes/build
 source-dir = releasenotes/source
+
+[entry_points]
+console_scripts =
+   lightning-rod = iotronic_lightningrod.lightningrod:main
+
+s4t.modules =
+   utility = iotronic_lightningrod.modules.utils:Utility
+   plugin = iotronic_lightningrod.modules.plugin_manager:PluginManager
+   device = iotronic_lightningrod.modules.device_manager:DeviceManager
+   vfs = iotronic_lightningrod.modules.vfs_manager:VfsManager
