python deployment updated.

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,4 +58,4 @@ s4t.modules =
    utility = iotronic_lightningrod.modules.utils:Utility
    plugin = iotronic_lightningrod.modules.plugin_manager:PluginManager
    device = iotronic_lightningrod.modules.device_manager:DeviceManager
-   vfs = iotronic_lightningrod.modules.vfs_manager:VfsManager
+#   vfs = iotronic_lightningrod.modules.vfs_manager:VfsManager
