--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,7 @@ classifier =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.3
-    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
 
 [files]
 packages =
@@ -59,3 +58,7 @@ s4t.modules =
    plugin = iotronic_lightningrod.modules.plugin_manager:PluginManager
    device = iotronic_lightningrod.modules.device_manager:DeviceManager
 #   vfs = iotronic_lightningrod.modules.vfs_manager:VfsManager
+
+[options]
+build_scripts =
+executable= /usr/bin/env python
