--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,11 @@
 # process, which may cause wedges in the gate later.
 
 pbr>=1.8 # Apache-2.0
+autobahn>=0.10.1  # MIT License
+six>=1.10.0  # MIT
+httplib2>=0.7.5  # MIT
 
 # Openstack modules
-oslo-config 
-oslo_log
+oslo.config>=5.1.0  # Apache-2.0
+oslo.log>=3.36.0  # Apache-2.0
+
