--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,13 @@
 *~
 .tox/
 .idea/
-pep8_result.txt
-smartme.*
-monasca*
-led.*
-settings.json
-setup.cfg.BKP
-setup.py.BKP
 iotronic_lightningrod.egg-info
 build
 AUTHORS
 Authors
 ChangeLog
 *.md
+.eggs
+dist
+iotronic_lightningrod/modules/test.py
+iotronic_lightningrod/modules/vfs_*
