--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ summary = Implementation of the Lightning-rod, the Stack4Things board-side probe
 description-file =
     README.rst
 author = Nicola Peditto, Fabio Verboso
-author-email = unime.mdslab@gmail.com
+author-email = n.peditto@gmail.com
 home-page = http://stack4things.unime.it/
 classifier =
     Environment :: OpenStack
@@ -16,12 +16,18 @@ classifier =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.3
-    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
 
 [files]
 packages =
     iotronic_lightningrod
+data-files =
+    bin/ = scripts/*
+    /iotronic_lightningrod/templates = templates/*
+    /iotronic_lightningrod/etc/iotronic = etc/iotronic/iotronic.conf
+    /iotronic_lightningrod/etc/logrotate.d = etc/logrotate.d/lightning-rod.log
+    /iotronic_lightningrod/etc/systemd/system = etc/systemd/system/s4t-lightning-rod.service
+
 
 [build_sphinx]
 source-dir = doc/source
@@ -58,4 +64,13 @@ s4t.modules =
    utility = iotronic_lightningrod.modules.utils:Utility
    plugin = iotronic_lightningrod.modules.plugin_manager:PluginManager
    device = iotronic_lightningrod.modules.device_manager:DeviceManager
-#   vfs = iotronic_lightningrod.modules.vfs_manager:VfsManager
+   service = iotronic_lightningrod.modules.service_manager:ServiceManager
+   # network = iotronic_lightningrod.modules.network_manager:NetworkManager
+   webservice = iotronic_lightningrod.modules.webservice_manager:WebServiceManager
+   # vfs = iotronic_lightningrod.modules.vfs_manager:VfsManager
+
+[options]
+build_scripts =
+executable= /usr/bin/env python
+
+
